# networking-bagpipe

./: .coveragerc  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bagpipe_bgp/: setup.cfg
bagpipe_bgp/devstack/: plugin.sh
bagpipe_bgp/etc/init.d/: bagpipe-fakerr
devstack/: agent  devstack-gate-rc  gate_hook.sh  override-defaults  plugin.sh  plugin.sh.bagpipe_bgp  post_test_hook.sh  settings  settings.bagpipe_bgp
devstack/gate-hooks/: README  bagpipe  bgpvpn  go-env  gobgp
doc/: requirements.txt
doc/source/: applications.rst  bagpipe-bgp.rst  conf.py  contributing.rst  design.rst  index.rst  installation.rst  ml2.blockdiag  overview.blockdiag  overview.rst  usage.rst
doc/source/configuration/: bagpipe-bgp.rst  dataplane-evpn-linux-vxlan.rst  dataplane-ipvpn-mpls-linux.rst  dataplane-ipvpn-mpls-ovs.rst  index.rst  ml2-bagpipe.rst  neutron-agent.rst  neutron.rst
doc/source/configuration/samples/: bagpipe-bgp.rst  dataplane-evpn-linux-vxlan.rst  dataplane-ipvpn-mpls-linux.rst  dataplane-ipvpn-mpls-ovs.rst  ml2-bagpipe.rst  neutron-agent.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/user/: applications.rst  bagpipe-bgp.rst  bgpvpn.blockdiag  design.rst  index.rst  overview.blockdiag
etc/: README.txt
etc/bagpipe-bgp/: bgp.conf.template
etc/bagpipe-bgp/rootwrap.d/: linux-vxlan.filters
etc/oslo-config-generator/: bagpipe-bgp.conf  dataplane-evpn-linux-vxlan.conf  dataplane-ipvpn-mpls-linux.conf  dataplane-ipvpn-mpls-ovs.conf  ml2-bagpipe.conf  neutron-agent.conf  neutron-sfc.conf
networking_bagpipe/: __init__.py  _i18n.py  opts.py  version.py
networking_bagpipe/agent/: agent_base_info.py  bagpipe_bgp_agent.py  bagpipe_linuxbridge_neutron_agent.py
networking_bagpipe/agent/bagpipe_ml2/: agent_extension.py
networking_bagpipe/agent/bgpvpn/: agent_extension.py  constants.py  rpc_agent.py  rpc_client.py
networking_bagpipe/agent/common/: constants.py
networking_bagpipe/agent/sfc/: agent_extension.py
networking_bagpipe/bagpipe_bgp/: bgp_daemon.py  constants.py  fakerr.py
networking_bagpipe/bagpipe_bgp/api/: api.py  config.py  controllers.py
networking_bagpipe/bagpipe_bgp/cli/: impex2dot.py  looking_glass.py  rest_attach.py
networking_bagpipe/bagpipe_bgp/common/: __init__.py  config.py  dataplane_utils.py  exceptions.py  log_decorator.py  looking_glass.py  net_utils.py  run_command.py  utils.py
networking_bagpipe/bagpipe_bgp/engine/: __init__.py  bgp_manager.py  bgp_peer_worker.py  exa.py  exabgp_peer_worker.py  flowspec.py  ipvpn.py  route_table_manager.py  tracker_worker.py  worker.py
networking_bagpipe/bagpipe_bgp/tests/: __init__.py  test_bgp_manager.py  test_engine_objects.py  test_ipvpn_objects.py  test_route_table_manager.py  test_tracker_worker.py  test_vpn_instance.py  test_vpn_manager.py
networking_bagpipe/bagpipe_bgp/vpn/: dataplane_drivers.py  identifier_allocators.py  label_allocator.py  manager.py  rd_allocator.py  vpn_instance.py
networking_bagpipe/bagpipe_bgp/vpn/evpn/: __init__.py  linux_vxlan.py  ovs.py
networking_bagpipe/bagpipe_bgp/vpn/ipvpn/: __init__.py  mpls_linux_dataplane.py  mpls_ovs_dataplane.py
networking_bagpipe/db/: sfc_db.py
networking_bagpipe/db/migration/: cli.py
networking_bagpipe/db/migration/alembic_migrations/: env.py
networking_bagpipe/db/models/: head.py
networking_bagpipe/driver/: constants.py  mech_bagpipe.py  sfc.py  type_route_target.py
networking_bagpipe/driver/sfc/: sfc.py
networking_bagpipe/objects/: bgpvpn.py  sfc.py
networking_bagpipe/objects/sfc/: chain_hop.py
networking_bagpipe/privileged/: __init__.py  privileged_utils.py
networking_bagpipe/rpc/: agent.py  client.py
networking_bagpipe/tests/: test_networking_bagpipe_l2.py
networking_bagpipe/tests/common/: json_fixtures.py
networking_bagpipe/tests/fullstack/: base.py  test_bagpipe_ml2_connectivity.py  test_bgpvpn_connectivity.py
networking_bagpipe/tests/functional/: requirements.txt
networking_bagpipe/tests/functional/db/: test_migrations.py
networking_bagpipe/tests/unit/: __init__.py
networking_bagpipe/tests/unit/agent/: base.py  test_bagpipe_bgp_agent.py  test_bagpipe_linuxbridge_neutron_agent.py  test_bgpvpn_agent_extension.py  test_linuxbridge_agent_extension.py
networking_bagpipe/tests/unit/bagpipe_bgp/: base.py  test_api.py  test_bgp_manager.py  test_config.py  test_dataplane_utils.py  test_engine_objects.py  test_identifier_allocators.py  test_ipvpn_objects.py  test_route_table_manager.py  test_tracker_worker.py  test_vpn_manager.py  (+1 more)
networking_bagpipe_l2/: __init__.py
networking_bagpipe_l2/agent/: bagpipe_bgp_agent.py  bagpipe_linuxbridge_neutron_agent.py
networking_bagpipe_l2/agent/bgpvpn/: rpc_agent.py  rpc_client.py
networking_bagpipe_l2/db/migration/: cli.py
networking_bagpipe_l2/driver/: mech_bagpipe.py  type_route_target.py
networking_bagpipe_l2/rpc/: agent.py  client.py
networking_bagpipe_l2/tests/: test_networking_bagpipe_l2.py
releasenotes/notes/: Remove-LinuxBridge-related-code-2e4a7d76478c120c.yaml  bagpipe_bgp-00387f95d7c4ed9e.yaml  bgpvpn-l2-ovs-6898d9ee5dbcf77f.yaml  bgpvpn-routes-control-660a16ff9b1c24ca.yaml  drop-py27-support-cd16e5d82985d9e9.yaml  drop-py39-3ea38c2af07fbd41.yaml  improve_fallback-96e524daf96ebcc1.yaml  ipvpn_ovs-2eab0293cb97585b.yaml  linux_mpls-1c4fd22486ad5733.yaml  privsep-sysctl-a6321b31de29fce1.yaml  remove-bagpipe-bgp-deprecated-action-cli-option-dfafa6b05d487e0c.yaml  sfc-2000351597a8c160.yaml
releasenotes/source/: conf.py  index.rst
samples/: gobgp.conf
samples/bagpipe-bgp/: basic  chain-example1  chain-example1bis  chain-example2  chain-example3  chain-redirect-lb  chain-redirect-lb2  chain-traffic-redirect  examples.md  generic-functions  setup-cross-routing  setup-cross-routing-per-interface
samples/init.d/: bagpipe-bgp  bagpipe-fakerr
tools/: tox_install.sh
(+41 files in other folders)
