[metadata]
name = networking-bagpipe
summary = Mechanism driver for Neutron ML2 plugin using BGP E-VPNs/IP VPNs as a backend
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_bagpipe

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_bagpipe/locale
domain = networking-bagpipe

[update_catalog]
domain = networking-bagpipe
output_dir = networking_bagpipe/locale
input_file = networking_bagpipe/locale/networking-bagpipe.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bagpipe/locale/networking-bagpipe.pot

[entry_points]
console_scripts =
    neutron-bagpipe-linuxbridge-agent = networking_bagpipe.agent.bagpipe_linuxbridge_neutron_agent:main
neutron.ml2.mechanism_drivers =
    bagpipe = networking_bagpipe.driver.mech_bagpipe:BaGPipeMechanismDriver
neutron.ml2.type_drivers =
    route_target = networking_bagpipe.driver.type_route_target:RouteTargetTypeDriver
neutron.db.alembic_migrations=
    networking-bagpipe = networking_bagpipe.db.migration:alembic_migrations
neutron.agent.l2.extensions =
    bagpipe = networking_bagpipe.agent.bagpipe_linuxbridge_neutron_agent:BagpipeAgentExtension

