[metadata]
name = networking-bagpipe
summary = Mechanism driver for Neutron ML2 plugin using BGP E-VPNs/IP VPNs as a backend
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/networking-bagpipe/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    networking_bagpipe
data_files =
    /etc/bagpipe-bgp =
        etc/bagpipe-bgp/bgp.conf.template
        etc/bagpipe-bgp/rootwrap.conf
    /etc/bagpipe-bgp/rootwrap.d =
        etc/bagpipe-bgp/rootwrap.d/mpls-ovs-dataplane.filters
        etc/bagpipe-bgp/rootwrap.d/linux-vxlan.filters

[compile_catalog]
directory = networking_bagpipe/locale
domain = networking-bagpipe

[update_catalog]
domain = networking-bagpipe
output_dir = networking_bagpipe/locale
input_file = networking_bagpipe/locale/networking-bagpipe.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_bagpipe/locale/networking-bagpipe.pot

[entry_points]
console_scripts =
    bagpipe-bgp = networking_bagpipe.bagpipe_bgp.bgp_daemon:daemon_main
    bagpipe-bgp-cleanup = networking_bagpipe.bagpipe_bgp.bgp_daemon:cleanup_main
    bagpipe-looking-glass = networking_bagpipe.bagpipe_bgp.cli.looking_glass:main
    bagpipe-rest-attach = networking_bagpipe.bagpipe_bgp.cli.rest_attach:main
    bagpipe-impex2dot = networking_bagpipe.bagpipe_bgp.cli.impex2dot:main
    bagpipe-fakerr = networking_bagpipe.bagpipe_bgp.fakerr:main
neutron.ml2.mechanism_drivers =
    bagpipe = networking_bagpipe.driver.mech_bagpipe:BaGPipeMechanismDriver
neutron.db.alembic_migrations=
    networking-bagpipe = networking_bagpipe.db.migration:alembic_migrations
neutron.agent.l2.extensions =
    bagpipe = networking_bagpipe.agent.bagpipe_ml2.agent_extension:BagpipeML2AgentExtension
    bagpipe_bgpvpn = networking_bagpipe.agent.bgpvpn.agent_extension:BagpipeBgpvpnAgentExtension
    bagpipe_sfc = networking_bagpipe.agent.sfc.agent_extension:BagpipeSfcAgentExtension
bagpipe.dataplane.evpn =
    dummy = networking_bagpipe.bagpipe_bgp.vpn.evpn:DummyDataplaneDriver
    linux = networking_bagpipe.bagpipe_bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
    ovs = networking_bagpipe.bagpipe_bgp.vpn.evpn.ovs:OVSDataplaneDriver
#for backward compatibility with old configs:
    DummyDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.evpn:DummyDataplaneDriver
    linux_vxlan.LinuxVXLANDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
    bagpipe.bgp.vpn.evpn.DummyDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.evpn:DummyDataplaneDriver
    bagpipe.bgp.vpn.evpn.linux_vxlan.LinuxVXLANDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.evpn.linux_vxlan:LinuxVXLANDataplaneDriver
bagpipe.dataplane.ipvpn =
    dummy = networking_bagpipe.bagpipe_bgp.vpn.ipvpn:DummyDataplaneDriver
    linux = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    ovs = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver
#for backward compatibility with old configs:
    DummyDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn:DummyDataplaneDriver
    mpls_linux_dataplane.MPLSLinuxDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    mpls_ovs_dataplane.MPLSOVSDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.DummyDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn:DummyDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.mpls_linux_dataplane.MPLSLinuxDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_linux_dataplane:MPLSLinuxDataplaneDriver
    bagpipe.bgp.vpn.ipvpn.mpls_ovs_dataplane.MPLSOVSDataplaneDriver = networking_bagpipe.bagpipe_bgp.vpn.ipvpn.mpls_ovs_dataplane:MPLSOVSDataplaneDriver
networking_sfc.sfc.drivers =
    bagpipe = networking_bagpipe.driver.sfc:BaGPipeSfcDriver

oslo.config.opts =
    networking_bagpipe.bagpipe_bgp_agent = networking_bagpipe.opts:list_bagpipe_bgp_agent_opts
    networking_bagpipe.api = networking_bagpipe.opts:list_api_opts
    networking_bagpipe.bgp_common = networking_bagpipe.opts:list_bgp_common_opts
    networking_bagpipe.run_command = networking_bagpipe.opts:list_run_command_opts
    networking_bagpipe.dataplane.ipvpn = networking_bagpipe.opts:list_dataplane_driver_ipvpn_opts
    networking_bagpipe.dataplane.ipvpn.mpls_linux = networking_bagpipe.opts:list_dataplane_driver_ipvpn_mpls_linux_opts
    networking_bagpipe.dataplane.ipvpn.mpls_ovs = networking_bagpipe.opts:list_dataplane_driver_ipvpn_mpls_ovs_opts
    networking_bagpipe.dataplane.evpn = networking_bagpipe.opts:list_dataplane_driver_evpn_opts
    networking_bagpipe.dataplane.evpn.linux_vxlan = networking_bagpipe.opts:list_dataplane_driver_evpn_linux_vxlan_opts
    networking_bagpipe.driver.sfc = networking_bagpipe.opts:list_neutron_sfc_opts
