[metadata]
name = bagpipe-bgp
version = 1.90
summary = Lightweight implementation of BGP IP VPN and E-VPN
description-file = README.rst
author = Orange Labs
author-email = thomas.morin@orange.com
maintainer = Thomas MORIN
home-page = https://github.com/Orange-OpenSource/bagpipe-bgp
license = Apache-2
classifier =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    bagpipe
data_files =
    /etc/bagpipe-bgp =
        config/bgp.conf.template
        etc/rootwrap.conf
    /etc/bagpipe-bgp/rootwrap.d =
        etc/bagpipe-bgp/rootwrap.d/mpls-ovs-dataplane.filters
        etc/bagpipe-bgp/rootwrap.d/linux-vxlan.filters
    /etc/init.d =
        etc/init.d/bagpipe-fakerr
    /etc/systemd/system =
        etc/systemd/system/bagpipe-bgp.service

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
